# weaknet-resume-download-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml  repos.example.yaml
tests/: test_aria2_daemon.py  test_cas_url.py  test_engine.py  test_hf_api.py  test_ms_api.py
weaknet_dl/: __main__.py  aria2_daemon.py  batch.py  cas_url.py  cli.py  config.py  downloader.py  engine.py  hf_api.py  manifest.py  ms_api.py  netmon.py  verify.py
weaknet_dl/backends/: __init__.py  aria2.py  base.py  hf_hub.py
