[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weaknet-dl"
version = "0.2.0"
description = "Resilient HuggingFace model downloader for weak networks (cross-platform Python rewrite)"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "httpx[socks]>=0.27",
    "huggingface_hub>=0.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
fast = ["hf_transfer>=0.1.6"]

[project.scripts]
weaknet-dl = "weaknet_dl.cli:main"

[tool.setuptools.packages.find]
include = ["weaknet_dl*"]
