[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weaknet-dl"
version = "0.3.0"
description = "HuggingFace model downloader for weak/proxied networks: proxy-resolves CAS URLs, hands them to aria2c via RPC, and hot-rotates URLs before they expire so the multi-connection download never restarts."
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "httpx[socks]>=0.27",
    "aria2p>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
weaknet-dl = "weaknet_dl.cli:main"

[tool.setuptools.packages.find]
include = ["weaknet_dl*"]
